tests/NormalTests/paczka1/fuzzy1/76509627.err
Error in line 1: B82Ko9 S437 0,8
Error in line 4: B82Ko9 A834 23,5
Error in line 2: 9O0Uae6u A834 48,1
Error in line 21: 9O0Uae6u A834 35,5
Error in line 16: S201 S884 35,3
